# Hospital-Appointment-System

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: ci.yml
include /: Appointment.h  Doctor.h  Patient.h  User.h
src/: Appointment.cpp  Patient.cpp  User.cpp  main.cpp
tests/: test_appointment.cpp  test_doctor.cpp  test_patient.cpp  test_user.cpp
